--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -241,6 +241,7 @@ tspan {
   justify-content: center;
   grid-row: 2;
   grid-column: 2;
+  font-size: 0.8em;
 }
 
 .dark-mode rect {
@@ -311,9 +312,13 @@ tspan {
 }
 
 .share-button-profile {
-  margin-top: 11px;
+  margin-top: 5px;
 }
 
 .user-profile-score {
   padding: 12px 0px;
+}
+
+.max-score {
+  opacity: 0.7;
 }
