--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -327,6 +327,31 @@ tspan {
   background: gray;
 }
 
+.user-profile-emoji-group {
+  display: inline-grid;
+  gap: 10px;
+}
+
+.emoji-1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.emoji-2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.emoji-3 {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.emoji-4 {
+  grid-column: 2;
+  grid-row: 2;
+}
+
 /* Responsive Adjustments for Cards */
 @media (max-width: 630px) {
   .circular-badge {
