--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -80,6 +80,7 @@
     justify-content: center;
     text-align: center;
     grid-auto-flow: column;
+    margin-left: 36.5px;
   }
 
 
@@ -281,6 +282,7 @@ tspan {
   padding: 1rem;
   width: 100%;
   grid-column: 3;
+  scale: 0.9;
 }
 
 .score-gauge {
@@ -329,7 +331,14 @@ tspan {
 
 .user-profile-emoji-group {
   display: inline-grid;
-  gap: 10px;
+  font-size: 1.8em;
+  align-content: center;
+  justify-content: center;
+  row-gap: 10px;
+  column-gap: 20px;
+  margin-left: 10px;
+  grid-column: 1;
+  grid-row: 2;
 }
 
 .emoji-1 {
@@ -355,9 +364,14 @@ tspan {
 /* Responsive Adjustments for Cards */
 @media (max-width: 630px) {
   .circular-badge {
-    grid-column: col / span 2;
+    grid-column: 2;
+    grid-row: 1;
     margin-left: 0;
     margin-right: 30px;
+  }
+  .user-profile-emoji-group {
+    grid-row: 1;
+    grid-column: 1;
   }
   .user-profile-main {
     grid-row: 2;
