--- a/src/components/ScoreExplainer/ScoreExplainer.css
+++ b/src/components/ScoreExplainer/ScoreExplainer.css
@@ -1,13 +1,13 @@
-.newsletter-page {
+.score-explainer-page {
     margin: 20px auto 20px;
     max-width: 450px;
     padding: 20px;
 }
 
-.newsletter-page .alt-card {
+.score-explainer-page .alt-card {
     text-align: left;
   }
 
-.newsletter-page ul {
+.score-explainer-page ul {
     margin-top: -5px;
 }
