--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -371,6 +371,10 @@ tspan {
   opacity: 0.5;
 }
 
+.post-type-card .recharts-surface {
+  margin-left: -15px;
+}
+
 /* Responsive Adjustments for Cards */
 @media (max-width: 630px) {
   .circular-badge {
