attempt to add og cards

--- a/src/components/CompareScores/CompareScores.css
+++ b/src/components/CompareScores/CompareScores.css
@@ -542,3 +542,7 @@
     margin-bottom: 23px;
     margin-top: -10px;
   }
+
+  .compare-scores-page .recharts-wrapper {
+    margin-left: -19.5px;
+  }
