--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -24,8 +24,9 @@
     transition: background-color 0.3s ease, border-color 0.3s ease;
   }
 
-  .home-content .circular-badge{
-    margin-left: -7.5px;
+  .home-content .circular-badge {
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .home-context-text {
